build.gradle.kts: Fix missing SunEC module